# ESP32-C6_Zigbee_Gateway

./: .gitignore  CMakeLists.txt  build.bat  partitions.csv  sdkconfig  sdkconfig.defaults
components/gw_core/: CMakeLists.txt
components/gw_core/include/gw_core/: action_exec.h  automation_compiled.h  automation_store.h  device_registry.h  event_bus.h  types.h  zb_classify.h  zb_model.h
components/gw_core/src/: action_exec.c  automation_compiled.c  automation_store.c  device_registry.c  event_bus.c  rules_engine.c  zb_classify.c  zb_model.c
components/gw_http/: CMakeLists.txt
components/gw_http/include/gw_http/: gw_http.h
components/gw_http/src/: gw_http.c  gw_ws.c
components/gw_notifications/: CMakeLists.txt
components/gw_notifications/include/gw_notifications/: gw_notifications.h
components/gw_zigbee/include/gw_zigbee/: gw_zigbee.h
components/gw_zigbee/src/: gw_zigbee.c
docs/: api.md  architecture.md  automation-design.md  current-state.md  event-pipeline-tuning.md  file-structure.md  getting-started.md  index.md  roadmap.md  troubleshooting.md  ws-protocol.md  zcl-cheatsheet.md  zigbee-spec-cheatsheet.md
main/: CMakeLists.txt  esp_zigbee_gateway.c  gw_wifi.c  wifi_aps_config.example.h
web/: package.json
web/src/: App.css  App.jsx  index.css
web/src/pages/: Automations.jsx  Device.jsx  Devices.jsx  Events.jsx
